kubernetes/apps/kube-system/cilium/gateway/app/gateway.yaml
---
# yaml-language-server: $schema=https://kubernetes-schemas.pages.dev/gateway.networking.k8s.io/gateway_v1.json
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: cilium
spec:
  gatewayClassName: cilium
  addresses:
    - type: IPAddress
      value: 192.168.20.3
  listeners:
    - name: http
      protocol: HTTP
      port: 80
      hostname: "*.${domain}.${tld}"
      allowedRoutes:
        namespaces:
          from: Same
    - name: https
      protocol: HTTPS
      port: 443
      hostname: "*.${domain}.${tld}"
      allowedRoutes:
        namespaces:
          from: All
      tls:
        certificateRefs:
          - kind: Secret
            name: wildcard-tls
